<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/rootview"
    tools:context=".Fragment.RecipeDetailsFragment">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:collapsedTitleGravity="center_vertical"
            app:expandedTitleGravity="center_horizontal"
            android:fitsSystemWindows="true"
            android:contentInsetStart="0dp"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cookies"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/overlay_white"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_margin="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStart="0dp"
                android:padding="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:paddingBottom="10dp"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/space24"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="3.5" />

                <TextView
                    android:id="@+id/tv_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-16dp"
                    android:gravity="center_horizontal"
                    tools:text="Nutella Pie"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextDark"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/ll_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space8"
                        android:drawableLeft="@drawable/ic_time"
                        android:drawablePadding="@dimen/space8"
                        android:gravity="center_vertical"
                        android:text="@string/timing"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_love"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space24"
                        android:layout_marginTop="@dimen/space8"
                        android:drawableLeft="@drawable/ic_favorite"
                        android:drawablePadding="@dimen/space8"
                        android:gravity="center_vertical"
                        android:text="@string/likes"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space24"
                        android:layout_marginTop="@dimen/space8"
                        android:drawableLeft="@drawable/ic_comments"
                        android:drawablePadding="@dimen/space8"
                        android:gravity="center_vertical"
                        android:text="@string/comment"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space24"
                    android:layout_marginRight="@dimen/space24"
                    android:layout_marginTop="@dimen/space16"
                    android:drawablePadding="@dimen/space8"
                    android:gravity="center_horizontal"
                    android:text="@string/recipe_des_string"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space8"
                    android:drawablePadding="@dimen/space8"
                    android:text="@string/recipe_author"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/ll_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space16"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/tv_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:paddingLeft="@dimen/space24"
                        android:paddingRight="@dimen/space24"
                        android:text="@string/share"
                        android:textColor="@color/colorPink"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1.5dp"
                        android:layout_height="@dimen/space8"
                        android:background="@color/colorPink" />

                    <Button
                        android:id="@+id/tv_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:paddingLeft="@dimen/space24"
                        android:paddingRight="@dimen/space24"
                        android:text="Comment"
                        android:textColor="@color/colorPink"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1.5dp"
                        android:layout_height="@dimen/space8"
                        android:background="@color/colorPink" />

                    <Button
                        android:id="@+id/tv_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:paddingLeft="@dimen/space24"
                        android:paddingRight="@dimen/space24"
                        android:text="@string/rate"
                        android:textColor="@color/colorPink"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/space8"
                    android:layout_marginTop="@dimen/space16"
                    android:src="@drawable/ic_shopping_basket_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space16"
                    android:text="@string/ingredients"
                    android:background="@drawable/bg_number"
                    android:padding="5dp"
                    android:textColor="@color/colorPink"
                    android:textSize="@dimen/h2" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space16"
                    android:background="@null"
                    android:nestedScrollingEnabled="false" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space8"
                    android:layout_marginTop="@dimen/space16"
                    android:text="@string/open_steps_now"
                    android:padding="5dp"
                    android:background="@drawable/bg_number"
                    android:textColor="@color/colorPink"
                    android:textSize="@dimen/h3" />

                <ImageView
                    android:layout_width="123dp"
                    android:layout_height="74dp"
                    android:layout_marginBottom="@dimen/space8"
                    android:layout_marginTop="@dimen/space16"
                    android:src="@drawable/ic_restaurant_menu_black_24dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space16"
                    android:text="@string/follow_steps"
                    android:textColor="@color/colorPink"
                    android:textSize="@dimen/h2" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>
        </FrameLayout>
        </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
